[package]
name = "bevy_transform_interpolation"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "A general-purpose transform interpolation plugin for fixed timesteps for the Bevy game engine"
documentation = "https://docs.rs/bevy_transform_interpolation"
repository = "https://github.com/Jondolf/bevy_transform_interpolation"
readme = "README.md"
keywords = ["gamedev", "easing", "bevy"]
categories = ["game-development"]

[features]
default = ["x11"]
x11 = ["bevy/x11"]

[dependencies]
bevy = { version = "0.15", default-features = false }
crossbeam-channel = "0.5"
profiling = "1.0"
rand = "0.8"
dyn-clone = "1.0"

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_window",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "bevy_gizmos",
] }
crossbeam-channel = "0.5"
profiling = "1.0"
rand = "0.8"
